<resources>
    <string name="app_name">Lorestan Gardesh</string>
    <string name="gardeshgar" translatable="false">Gardeshgar</string>
    <string name="test_string" translatable="false">TEST TEST TEST TEST TEST TEST</string>
    <string name="search_bar_hint">Search places and events</string>
    <string name="home">Home</string>
    <string name="locations">Locations</string>
    <string name="events">Events</string>
    <string name="for_you">For you</string>
    <string name="around_you">Around you</string>
    <string name="popular">Popular</string>
    <string name="tourism">Tourism</string>
    <string name="traveling">Traveling</string>
    <string name="near_places_label">Places and events near you</string>
    <string name="tours">Tours</string>
    <string name="travel_tickets">Travel tickets</string>
    <string name="tools">Tools</string>
    <string name="tour_scheduler">Tour Scheduler</string>
    <string name="distance_calculator">Distance Calculator</string>
    <string name="navigate">Navigate</string>
    <string name="username">Username</string>
    <string name="test_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Egestas purus viverra accumsan in nisl nisi Arcu cursus vitae congue mauris rhoncus aenean vel elit scelerisque In egestas erat imperdiet sed euismod nisi porta lorem mollis Morbi tristique senectus et netus</string>
    <string name="reviews">Reviews</string>
    <string name="tenth">/10</string>
    <string name="sign_up">Sign Up</string>
    <string name="tourist_scheduler">Tourist Scheduler</string>
    <string name="radius">Radius</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="number_limit">Number Limit</string>
    <string name="calculate">Calculate</string>
    <string name="settings">Settings</string>
    <string name="reserved_tours">ًReserved Tours</string>
    <string name="favourites">Favourites</string>
    <string name="current_location">Current Location</string>
    <string name="selected_location">Selected Location</string>
    <string name="starting_point">Starting Point</string>
    <string name="add_passenger">Add Passenger</string>
    <string name="expenses">Expenses</string>
    <string name="rules">Rules</string>
    <string name="gallery">Photos Gallery</string>
    <string name="schedule">Schedule</string>
    <string name="saved">Saved</string>
    <string name="saved_items">Saved Items</string>
    <string name="hours_per_day">Hours Per Day</string>
    <string name="days">Days</string>
    <string name="account">Account</string>
    <string name="antiquities">Antiquities</string>
    <string name="nature">Nature</string>
    <string name="bazaar">Bazaar</string>
    <string name="museum">Museums</string>
    <string name="most_related">Most Related</string>
    <string name="closest">Closest</string>
    <string name="farthest">Farthest</string>
    <string name="most_popular">Most Popular</string>
    <string name="most_visited">Most Visited</string>
    <string name="search">Search</string>
    <string name="bus">Bus</string>
    <string name="flight_tickets">Flight</string>
    <string name="translator">Translator</string>
    <string name="smart_assistant">Assistant</string>
    <string name="scheduler">Scheduler</string>
    <string name="hotels">Hotels</string>
    <string name="bus_tickets">Bus Tickets</string>
    <string name="start">Start</string>
    <string name="destination">Destination</string>
    <string name="departure_date">Departure Date</string>
    <string name="cheapest">Cheapest</string>
    <string name="most_expensive">Most expensive</string>
    <string name="soonest">Soonest</string>
    <string name="latest">Latest</string>
    <string name="from_price">From price</string>
    <string name="to_price">To price</string>
    <string name="price">Price:</string>
    <string name="number_of_passengers">Number of passengers</string>
    <string name="economy">Economy</string>
    <string name="flight_ticket">Flight ticket</string>
    <string name="ecotourism">Ecotourism</string>
    <string name="location">Location</string>
    <string name="toman">toman</string>
    <string name="duration">Duration</string>
    <string name="longest">Longest</string>
    <string name="shortest">Shortest</string>
    <string name="plane">Plane</string>
    <string name="walking">Walking</string>
    <string name="time">Time</string>
    <string name="hotel_reservation">Hotel Reservation</string>
    <string name="stay_duration">Stay Duration</string>
    <string name="number_of_guests">Number of Guests</string>
    <string name="_1_star">1 Star</string>
    <string name="_2_star">2 Star</string>
    <string name="_3_star">3 Star</string>
    <string name="_4_star">4 Star</string>
    <string name="_5_star">5 Star</string>
    <string name="_1_bed">1 Bed</string>
    <string name="_2_beds">2 Beds</string>
    <string name="_3_beds">3 Beds</string>
    <string name="_4_beds">4 Beds</string>
    <string name="_5_beds">5 Beds</string>
    <string name="per_night">Per night</string>
    <string name="chat_with_assistant">Chat With Assistant</string>
    <string name="user">User</string>
    <string name="starting_city">Starting city</string>
    <string name="destination_city">Destination city</string>
    <string name="historical">Historical</string>
    <string name="restaurant">Restaurant</string>
    <string name="hotel">Hotel</string>
    <string name="cafe">Cafe</string>
    <string name="shop">Shop</string>
    <string name="park">Park</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="working_hours">Working Hours</string>
    <string name="nearest_locations">Nearest Locations</string>
    <string name="distance">Distance</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_wait">Please Wait...</string>
    <string name="near_me">Near me</string>
</resources>