<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_item_1"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/bottom_nav_item_2"
        android:enabled="true"
        android:icon="@drawable/toolbox"
        android:title="@string/tools"/>
<!--    <item-->
<!--        android:id="@+id/bottom_nav_item_3"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/baseline_calendar_month_24"-->
<!--        android:title="@string/travel"/>-->
    <item
        android:id="@+id/bottom_nav_item_4"
        android:enabled="true"
        android:icon="@drawable/baseline_star_outline_24"
        android:title="@string/for_you"
        />
</menu>