<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".ui.main.HomeFragment">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="@dimen/main_title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/near_you_title"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carousel_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_marginTop="8dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:transitionName="gallery"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/near_you_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/near_places_label"
        android:textSize="@dimen/main_title_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/carousel_recycler_view"
        tools:layout_editor_absoluteX="12dp"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/near_you_card_view_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/near_you_title"
        tools:layout_editor_absoluteX="12dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/traveling"
        android:textSize="@dimen/main_title_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/near_you_card_view_recycler" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:columnCount="3"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bus_ticket_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_columnWeight="1"
            android:text="@string/bus"
            app:icon="@drawable/baseline_directions_bus_24"
            app:iconGravity="top"
            app:iconSize="35dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/flight_ticket_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_columnWeight="1"
            android:text="@string/flight_tickets"

            app:icon="@drawable/baseline_airplanemode_active_24"
            app:iconGravity="top"
            app:iconSize="35dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tours_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_columnWeight="1"
            android:text="@string/tours"
            app:icon="@drawable/baseline_map_24"
            app:iconGravity="top"
            app:iconSize="35dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hotels_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/hotels"
            app:icon="@drawable/baseline_hotel_24"
            app:iconGravity="top"
            app:iconSize="35dp" />
    </GridLayout>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tools"
        android:textSize="@dimen/main_title_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        tools:layout_editor_absoluteX="12dp" />

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:columnCount="3"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        tools:layout_editor_absoluteX="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/translator_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_weight="1"
            android:text="@string/translator"
            app:icon="@drawable/ic_translate"
            app:iconGravity="top"
            app:iconSize="35dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/assistant_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_weight="1"
            android:text="@string/smart_assistant"
            app:icon="@drawable/ic_assistant"
            app:iconGravity="top"
            app:iconSize="35dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scheduler_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_weight="1"
            android:text="@string/scheduler"
            app:icon="@drawable/ic_schedule"
            app:iconGravity="top"
            app:iconSize="35dp" />
    </GridLayout>


    <!--    <TextView-->
    <!--        android:id="@+id/tours_title"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/tours"-->
    <!--        android:textSize="@dimen/main_title_text_size"-->
    <!--        android:textStyle="bold"-->
    <!--        android:visibility="gone"-->
    <!--        tools:visibility="visible" />-->

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/tours_card_view_recycler"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:clipChildren="false"-->
    <!--        android:clipToPadding="false"-->
    <!--        android:visibility="gone"-->
    <!--        tools:visibility="visible" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/travel_tickets_title"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/travel_tickets"-->
    <!--            android:textSize="@dimen/main_title_text_size"-->
    <!--            android:textStyle="bold"-->
    <!--            android:visibility="gone"-->
    <!--            tools:visibility="visible" />-->

    <!--        <androidx.recyclerview.widget.RecyclerView-->
    <!--            android:id="@+id/travel_tickets_card_view_recycler"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:clipChildren="false"-->
    <!--            android:clipToPadding="false"-->
    <!--            android:visibility="gone"-->
    <!--            tools:visibility="visible" />-->

</androidx.constraintlayout.widget.ConstraintLayout>