<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.RealtimeSuggestionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/radius"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/radius_radio"
        app:layout_constraintEnd_toStartOf="@+id/radius_radio"
        app:layout_constraintTop_toTopOf="@+id/radius_radio" />
    <RadioGroup
        android:id="@+id/radius_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:divider="@drawable/empty_divider"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/small" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/realtime_items_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/radius_radio"
        tools:listitem="@layout/search_fragment_search_result" />
</androidx.constraintlayout.widget.ConstraintLayout>