<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/empty_divider"
    android:orientation="vertical"
    android:padding="12dp"
    android:scrollbars="none"
    android:showDividers="middle"
    tools:context=".ui.main.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="@dimen/main_title_text_size"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carousel_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/near_you_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/near_places_label"
        android:textSize="@dimen/main_title_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/near_you_card_view_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tours_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tours"
        android:textSize="@dimen/main_title_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tours_card_view_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:visibility="gone"
        tools:visibility="visible" />

    <!--    <TextView-->
    <!--        android:id="@+id/travel_tickets_title"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/travel_tickets"-->
    <!--        android:textSize="@dimen/main_title_text_size"-->
    <!--        android:textStyle="bold"-->
    <!--        android:visibility="gone"-->
    <!--        tools:visibility="visible" />-->

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/travel_tickets_card_view_recycler"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:clipChildren="false"-->
    <!--        android:clipToPadding="false"-->
    <!--        android:visibility="gone"-->
    <!--        tools:visibility="visible" />-->

</LinearLayout>